로블록스 타이쿤 시뮬레이터> 베타 #1 릴리즈

--- a/Tycoon.csproj
+++ b/Tycoon.csproj
@@ -109,7 +109,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Commands\ClientCommands\basicfeatures\Chat.cs" />
+    <Compile Include="Core\Commands\ClientCommands\basicfeatures\Emotion.cs" />
+    <Compile Include="Core\Commands\ClientCommands\basicfeatures\Suicide.cs" />
+    <Compile Include="Core\Commands\RemoteAdminCommands\AdminFeatures\ManageDollar.cs" />
     <Compile Include="Core\Configs\Config.cs" />
+    <Compile Include="Core\EventArgs\MapEvents.cs" />
     <Compile Include="Core\EventArgs\PlayerEvents.cs" />
     <Compile Include="Core\EventArgs\ServerEvents.cs" />
     <Compile Include="Core\Extensions\Base.cs" />
@@ -119,8 +124,6 @@
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Core\Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
