--- a/Tycoon.csproj
+++ b/Tycoon.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Core\Commands\ClientCommands\basicfeatures\Emotion.cs" />
     <Compile Include="Core\Commands\ClientCommands\basicfeatures\Suicide.cs" />
     <Compile Include="Core\Commands\RemoteAdminCommands\AdminFeatures\ManageDollar.cs" />
+    <Compile Include="Core\Commands\RemoteAdminCommands\AdminFeatures\StartGame.cs" />
     <Compile Include="Core\Configs\Config.cs" />
     <Compile Include="Core\EventArgs\MapEvents.cs" />
     <Compile Include="Core\EventArgs\PlayerEvents.cs" />
