--- a/Tycoon.csproj
+++ b/Tycoon.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Core\Commands\RemoteAdminCommands\AdminFeatures\ManageDollar.cs" />
     <Compile Include="Core\Commands\RemoteAdminCommands\AdminFeatures\StartGame.cs" />
     <Compile Include="Core\Configs\Config.cs" />
+    <Compile Include="Core\EventArgs\MEREvents.cs" />
     <Compile Include="Core\EventArgs\MapEvents.cs" />
     <Compile Include="Core\EventArgs\PlayerEvents.cs" />
     <Compile Include="Core\EventArgs\ServerEvents.cs" />
