이제 모든 플레이어의 "킬/데스/어시스트 (달러)"가 칭호로써 표시됩니다.

--- a/Tycoon.csproj
+++ b/Tycoon.csproj
@@ -127,6 +127,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Classes\PlayerInfo.cs" />
     <Compile Include="Core\Classes\RemoteCommandSender.cs" />
     <Compile Include="Core\Commands\ClientCommands\basicfeatures\Chat.cs" />
     <Compile Include="Core\Commands\ClientCommands\basicfeatures\Emotion.cs" />
